--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?><!-- Template: Source + GWT + in workspace dependencies 27.11.2010 --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?><!-- Template: Source 
+	+ GWT + in workspace dependencies 27.11.2010 -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<groupId>org.javadelight</groupId>
-	<artifactId>delight-keyvalue-tests</artifactId>
+	<artifactId>delight-rpc</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
-	<description>General tests for key value stores.</description>
-	<url>https://github.com/javadelight/delight-keyvalue-tests</url>
+	<description>A solid foundation for implementation client/server RPC.</description>
+	<url>https://github.com/javadelight/delight-rpc</url>
 	<properties>
 
 		<module.importedPackages>
 			org.junit,
 			*
 		</module.importedPackages>
-		<module.exportedPackages>!delight.keyvalue.tests.internal*,delight.keyvalue.tests*
+		<module.exportedPackages>!delight.rpc.internal*,delight.rpc*
 		</module.exportedPackages>
 		<module.serviceDefinitions>
 		</module.serviceDefinitions>
@@ -19,13 +22,8 @@
 	<!-- Dependent Modules -->
 	<dependencies>
 
-		<dependency>
-			<groupId>de.mxro.async.map</groupId>
-			<artifactId>async-map</artifactId>
-			<version>0.0.15</version>
-		</dependency>
 
-	
+
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -34,7 +32,7 @@
 			<scope>test</scope>
 		</dependency>
 
-<dependency>
+		<dependency>
 			<groupId>org.eclipse.xtend</groupId>
 			<artifactId>org.eclipse.xtend.lib</artifactId>
 			<version>2.8.3</version>
@@ -100,8 +98,8 @@
 						</goals>
 						<configuration>
 							<tasks>
-								<delete file="${basedir}/META-INF/MANIFEST.MF"/>
-								<copy file="target/classes/META-INF/MANIFEST.MF" tofile="${basedir}/META-INF/MANIFEST.MF"/>
+								<delete file="${basedir}/META-INF/MANIFEST.MF" />
+								<copy file="target/classes/META-INF/MANIFEST.MF" tofile="${basedir}/META-INF/MANIFEST.MF" />
 							</tasks>
 						</configuration>
 					</execution>
@@ -284,14 +282,14 @@
 			<url>${repos.appjangle-snapshots}</url>
 		</snapshotRepository>
 	</distributionManagement>
-	
+
 	<repositories>
 		<repository>
 			<id>Appjangle Releases</id>
 			<url>http://maven.appjangle.com/appjangle/releases</url>
 		</repository>
 	</repositories>
-	
+
 	<developers>
 		<developer>
 			<id>mxro</id>
@@ -308,11 +306,6 @@
 		</developer>
 	</developers>
 
-	<scm>
-		<connection>scm:git:git@github.com:mxro/async-map-sql.git</connection>
-		<url>https://github.com/mxro/async-map-sql</url>
-		<developerConnection>scm:git:git@github.com:mxro/async-map-sql.git
-		</developerConnection>
-	</scm>
+	
 
 </project>
